# CommitMint

./: .gitignore  README.md  pyproject.toml  requirements.txt
commitmint/: __init__.py  cli.py  config.py  generator.py  git_handler.py  models.py  providers.py
commitmint/prompts/: human_prompt.txt  system_prompt.txt
