[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitmint"
version = "0.5.0"
description = "the freshest AI commit message generator"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.21",
    "langchain-google-genai>=2.1.12",
    "gitpython>=3.1.40",
    "typer>=0.19.0",
    "rich>=14.0.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
mint = "commitmint.cli:app"